--- a/EFStories/Views/Shared/_Layout.cshtml
+++ b/EFStories/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryupload")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
